--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
   <title>Место</title>
 </head>
 <body>
-<header></header>
-<main></main>
+<header class="header">
+  <img src="./images/logo.svg" alt="Лого">
+</header>
+<main>
+  <section class="profile">
+    <img class="profile__avatar" src="./images/kusto.jpg" alt="Кусто">
+    <div class="profile__info">
+      <h2 class="profile__name">Жак-Ив Кусто</h2>
+      <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
+    </div>
+    <p class="prolife__about">Исследователь океана</p>
+    <button class="profile__add-button" type="button" aria-label="Добавить"></button>
+  </section>
+</main>
 <footer></footer>
 </body>
 </html>
