--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
   <section class="profile">
     <img class="profile__avatar" src="./images/kusto.jpg" alt="Кусто">
     <div class="profile__info">
-      <h2 class="profile__name">Жак-Ив Кусто</h2>
+      <h1 class="profile__name">Жак-Ив Кусто</h1>
       <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
     </div>
     <p class="prolife__about">Исследователь океана</p>
     <button class="profile__add-button" type="button" aria-label="Добавить"></button>
   </section>
+  <section class="elements">
+    <ul class="elements"></ul>
+  </section>
 </main>
-<footer></footer>
+<footer>
+  <p class="footer__copyright">&copy;2022 Mesto Russia</p>
+</footer>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
