--- a/index.html
+++ b/index.html
@@ -21,16 +21,30 @@
       <h1 class="profile__name">Жак-Ив Кусто</h1>
       <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
     </div>
-    <p class="prolife__about">Исследователь океана</p>
+    <p class="prolife__about-user">Исследователь океана</p>
     <button class="profile__add-button" type="button" aria-label="Добавить"></button>
   </section>
   <section class="elements">
-    <ul class="elements"></ul>
+    <ul class="elements__list"></ul>
   </section>
 </main>
 <footer>
-  <p class="footer__copyright">&copy;2022 Mesto Russia</p>
+  <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 </footer>
-<script src="./scripts/index.js"></script>
+<div class="popup popup_form_edit-profile">
+  <div class="popup__container">
+    <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+    <h3 class="popup__title">Редактировать профиль</h3>
+    <form class="popup__form" name="formEdit">
+      <fieldset class="popup__fieldset">
+        <input class="popup__input popup__input_name" type="text" placeholder="Имя пользователя" name="name">
+        <input class="popup__input popup__input_about" type="text" placeholder="О себе" name="about">
+      </fieldset>
+      <button class="popup__btn-save" type="submit" aria-label="Сохранить"></button>
+    </form>
+    <button class="popup__btn-close" type="button" aria-label="Закрыть окно"></button>
+  </div>
+</div>
+<script src="./pages/index.js"></script>
 </body>
 </html>
