--- a/index.html
+++ b/index.html
@@ -25,7 +25,50 @@
     <button class="profile__add-button" type="button" aria-label="Добавить"></button>
   </section>
   <section class="elements">
-    <ul class="elements__list"></ul>
+    <ul class="elements__list">
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/china_opera.jpg" alt="Китайская опера">
+        <div class="elements__btn">
+          <h2 class="elements__title">Китайская опера</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/Chongqing Hongyadong, China.jpg" alt="Чунцин">
+        <div class="elements__btn">
+          <h2 class="elements__title">Чунцин, Китай</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/kyoto.jpg" alt="Киото">
+        <div class="elements__btn">
+          <h2 class="elements__title">Киото, Япония</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/Shinjuku Omoide Yokocho, Shinjuku-ku, Japan.jpg" alt="Синдзюку">
+        <div class="elements__btn">
+          <h2 class="elements__title">Синдзюку, Токио, Япония</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/ren-ran-HG5QX-GXV5A-unsplash.jpg" alt="Горы в тумане">
+        <div class="elements__btn">
+          <h2 class="elements__title">Горы в тумане</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+      <li class="elements__item">
+        <img class="elements__photo" src="./images/twk-tt-xt0ncvINSEY-unsplash.jpg" alt="Пагода">
+        <div class="elements__btn">
+          <h2 class="elements__title">Пагода</h2>
+          <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
+        </div>
+      </li>
+    </ul>
   </section>
 </main>
 <footer>
