header, profile, elements

--- a/index.html
+++ b/index.html
@@ -32,43 +32,43 @@
     <ul class="elements__list">
       <li class="elements__item">
         <img class="elements__photo" src="./images/china_opera.jpg" alt="Китайская опера">
-        <div class="elements__btn">
-          <h2 class="elements__title">Китайская опера</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Китайская опера</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
         <img class="elements__photo" src="./images/Chongqing Hongyadong, China.jpg" alt="Чунцин">
-        <div class="elements__btn">
-          <h2 class="elements__title">Чунцин, Китай</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Чунцин, Китай</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
         <img class="elements__photo" src="./images/kyoto.jpg" alt="Киото">
-        <div class="elements__btn">
-          <h2 class="elements__title">Киото, Япония</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Киото, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
         <img class="elements__photo" src="./images/Shinjuku Omoide Yokocho, Shinjuku-ku, Japan.jpg" alt="Синдзюку">
-        <div class="elements__btn">
-          <h2 class="elements__title">Синдзюку, Токио, Япония</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Синдзюку, Токио, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
         <img class="elements__photo" src="./images/ren-ran-HG5QX-GXV5A-unsplash.jpg" alt="Горы в тумане">
-        <div class="elements__btn">
-          <h2 class="elements__title">Горы в тумане</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Горы в тумане</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
         <img class="elements__photo" src="./images/twk-tt-xt0ncvINSEY-unsplash.jpg" alt="Пагода">
-        <div class="elements__btn">
-          <h2 class="elements__title">Пагода</h2>
+        <div class="elements__caption-container">
+          <h2 class="elements__caption">Пагода</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
