--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </ul>
   </section>
 </main>
-<footer>
+<footer class="footer">
   <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 </footer>
 <div class="popup popup_form_edit-profile">
