--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </footer>
 <div class="popup popup_form_edit-profile">
   <div class="popup__container">
-    <button class="popup__close-button" type="button" aria-label="Закрыть"></button>
+    <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
     <h3 class="popup__title">Редактировать профиль</h3>
     <form class="popup__form" name="formEdit">
       <fieldset class="popup__fieldset">
