--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@
         <input class="popup__input popup__input_name" type="text" placeholder="Имя пользователя" name="name">
         <input class="popup__input popup__input_about" type="text" placeholder="О себе" name="about">
       </fieldset>
-      <button class="popup__btn-save" type="submit" aria-label="Сохранить"></button>
+      <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
     </form>
-    <button class="popup__btn-close" type="button" aria-label="Закрыть окно"></button>
   </div>
 </div>
 <script src="./pages/index.js"></script>
