--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <footer class="footer">
   <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 </footer>
-<div class="popup popup_form_edit-profile">
+<div class="popup popup_hidden_form">
   <div class="popup__container">
     <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
     <h3 class="popup__title">Редактировать профиль</h3>
