--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/Shinjuku Omoide Yokocho, Shinjuku-ku, Japan.jpg" alt="Синдзюку">
+        <img class="elements__photo" src="./images/Shinjuku Omoide Yokocho, Shinjuku-ku, Japan-min.jpg" alt="Синдзюку">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Синдзюку, Токио, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
