--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
   <section class="elements">
     <ul class="elements__list">
       <li class="elements__item">
-        <img class="elements__photo" src="./images/china_opera.jpg" alt="Китайская опера">
+        <img class="elements__photo" src="https://images.unsplash.com/photo-1653356572769-8a8d4048c91b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2075&q=80" alt="Китайская опера">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Китайская опера</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/Chongqing Hongyadong, China.jpg" alt="Чунцин">
+        <img class="elements__photo" src="https://images.pexels.com/photos/1441932/pexels-photo-1441932.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Гонг Конг">
         <div class="elements__caption-container">
-          <h2 class="elements__caption">Чунцин, Китай</h2>
+          <h2 class="elements__caption">Коулун, Гонг Конг</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/kyoto.jpg" alt="Киото">
+        <img class="elements__photo" src="https://images.unsplash.com/photo-1493780474015-ba834fd0ce2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1142&q=80" alt="Киото">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Киото, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/Shinjuku Omoide Yokocho, Shinjuku-ku, Japan-min.jpg" alt="Синдзюку">
+        <img class="elements__photo" src="https://images.unsplash.com/photo-1508504509543-5ca56440e013?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="Синдзюку">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Синдзюку, Токио, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/ren-ran-HG5QX-GXV5A-unsplash.jpg" alt="Горы в тумане">
+        <img class="elements__photo" src="https://images.pexels.com/photos/3889741/pexels-photo-3889741.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Каппадокия">
         <div class="elements__caption-container">
-          <h2 class="elements__caption">Горы в тумане</h2>
+          <h2 class="elements__caption">Каппадокия, Турция</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="./images/twk-tt-xt0ncvINSEY-unsplash.jpg" alt="Пагода">
+        <img class="elements__photo" src="https://images.pexels.com/photos/3408354/pexels-photo-3408354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Пагода">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Пагода</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
