--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <button class="profile__edit-btn" type="button" aria-label="Редактировать профиль"></button>
         </div>
-        <p class="prolife__about-user">Исследователь океана</p>
+        <p class="profile__about-user">Исследователь океана</p>
       </div>
     </div>
     <button class="profile__add-btn" type="button" aria-label="Добавить"></button>
