--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
   <section class="elements">
     <ul class="elements__list">
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.unsplash.com/photo-1653356572769-8a8d4048c91b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2075&q=80" alt="Китайская опера">
+        <img class="elements__photo" src="./images/china_opera.jpg" alt="Китайская опера">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Китайская опера</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.pexels.com/photos/1441932/pexels-photo-1441932.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Гонг Конг">
+        <img class="elements__photo" src="./images/Коулун.jpeg" alt="Гонг Конг">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Коулун, Гонг Конг</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.unsplash.com/photo-1493780474015-ba834fd0ce2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1142&q=80" alt="Киото">
+        <img class="elements__photo" src="./images/kyoto.jpg" alt="Киото">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Киото, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.unsplash.com/photo-1508504509543-5ca56440e013?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="Синдзюку">
+        <img class="elements__photo" src="./images/Синдзюку.jpeg" alt="Синдзюку">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Синдзюку, Токио, Япония</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.pexels.com/photos/3889741/pexels-photo-3889741.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Каппадокия">
+        <img class="elements__photo" src="./images/Каппадокия.jpeg" alt="Каппадокия">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Каппадокия, Турция</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
       </li>
       <li class="elements__item">
-        <img class="elements__photo" src="https://images.pexels.com/photos/3408354/pexels-photo-3408354.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Пагода">
+        <img class="elements__photo" src="./images/пагода.jpeg" alt="Пагода">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Пагода</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
@@ -81,7 +81,7 @@
 <div class="popup popup_hidden_form">
   <div class="popup__container">
     <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
-    <h3 class="popup__title">Редактировать профиль</h3>
+    <h2 class="popup__title">Редактировать профиль</h2>
     <form class="popup__form" name="formEdit">
       <fieldset class="popup__fieldset">
         <input class="popup__input popup__input_name" type="text" placeholder="Имя пользователя" name="name">
@@ -91,6 +91,6 @@
     </form>
   </div>
 </div>
-<script src="./pages/index.js"></script>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
