--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body class="page">
 <header class="header">
-  <img class="header__logo" src="./images/logo-1.svg" alt="Лого">
+  <a href="#">
+    <img class="header__logo" src="./images/logo-1.svg" alt="Лого">
+  </a>
 </header>
 <main>
   <section class="profile">
