--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
     <h2 class="popup__title">Редактировать профиль</h2>
     <form class="popup__form" name="formEdit">
       <fieldset class="popup__fieldset">
-        <input class="popup__input popup__input_name" type="text" placeholder="Имя пользователя" name="name">
-        <input class="popup__input popup__input_about" type="text" placeholder="О себе" name="about">
+        <input class="popup__input popup__input_type_name" type="text" placeholder="Имя пользователя" name="name">
+        <input class="popup__input popup__input_type_about" type="text" placeholder="О себе" name="about">
       </fieldset>
       <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
     </form>
