--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </section>
   <section class="elements">
     <ul class="elements__list">
-      <li class="elements__item">
+     <!-- <li class="elements__item">
         <img class="elements__photo" src="./images/china_opera.jpg" alt="Китайская опера">
         <div class="elements__caption-container">
           <h2 class="elements__caption">Китайская опера</h2>
@@ -73,7 +73,7 @@
           <h2 class="elements__caption">Пагода</h2>
           <button class="elements__btn-like" type="button" aria-label="Лайк"></button>
         </div>
-      </li>
+      </li>-->
     </ul>
   </section>
 </main>
@@ -93,6 +93,33 @@
     </form>
   </div>
 </div>
+
+<!--<div class="popup popup_add-cards_form">
+  <div class="popup__container popup__container_add_form">
+    <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
+    <h2 class="popup__title">Новое место</h2>
+    <form class="popup__form popup__form_add-cards" name="formAdd">
+      <fieldset class="popup__fieldset">
+        <input class="popup__input popup__input_type_place-name" type="text" placeholder="Название места" name="name">
+        <input class="popup__input popup__input_type_link" type="url" placeholder="Ссылка на картинку" name="link">
+      </fieldset>
+      <button class="popup__btn-add" type="submit" aria-label="Создать">Создать</button>
+    </form>
+  </div>
+</div>-->
+
+
+<template id="cards_template">
+  <li class="cards">
+    <img class="cards__photo" src="#" alt="Фото">
+    <button class="cards__delete-btn" type="button" aria-label="Удалить карточку"></button>
+    <div class="cards__caption-container">
+      <h2 class="cards__caption"></h2>
+      <button class="cards__btn-like" type="button" aria-label="Лайк"></button>
+    </div>
+  </li>
+</template>
+ 
 <script src="./scripts/index.js"></script>
 </body>
 </html>
