--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
 </footer>
 <div class="popup popup_hidden_form">
-  <div class="popup__container">
+  <div class="popup__container popup__container_edit_form">
     <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
     <h2 class="popup__title">Редактировать профиль</h2>
     <form class="popup__form" name="formEdit">
@@ -94,7 +94,7 @@
   </div>
 </div>
 
-<!--<div class="popup popup_add-cards_form">
+<div class="popup popup_hidden_form">
   <div class="popup__container popup__container_add_form">
     <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
     <h2 class="popup__title">Новое место</h2>
@@ -106,7 +106,7 @@
       <button class="popup__btn-add" type="submit" aria-label="Создать">Создать</button>
     </form>
   </div>
-</div>-->
+</div>
 
 
 <template id="cards_template">
