--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 </div>
 <div class="popup popup_type_photo-open">
-  <figure class="popup__container_photo">
+  <figure class="popup__container-photo">
     <button class="popup__close-btn popup__close-btn_type_photo" type="button" aria-label="Закрыть"></button>
     <img class="popup__photo-open" src="#" alt="Фото">
     <figcaption class="popup__figcaption"></figcaption>
