--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <h2 class="popup__title">Редактировать профиль</h2>
     <form class="popup__form popup__form_type_edit" name="formEdit">
       <fieldset class="popup__fieldset">
-        <input class="popup__input popup__input_type_name" type="text" placeholder="Имя пользователя" name="name">
-        <input class="popup__input popup__input_type_about" type="text" placeholder="О себе" name="about">
+        <input id="input_type_name" class="popup__input popup__input_type_name" type="text" placeholder="Имя пользователя" name="name" minlength="2" maxlength="40" required>
+        <span id="input_type_name-error" class="popup__error popup__error_type_name"></span>
+        <input id="input_type_about" class="popup__input popup__input_type_about" type="text" placeholder="О себе" name="about" minlength="2" maxlength="200" required>
+        <span id="input_type_about-error" class="popup__error popup__error_type_about"></span>
       </fieldset>
       <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
     </form>
@@ -55,8 +57,10 @@
     <h2 class="popup__title">Новое место</h2>
     <form class="popup__form popup__form_type_add" name="formAdd">
       <fieldset class="popup__fieldset">
-        <input class="popup__input popup__input_type_place-name" type="text" placeholder="Название места" name="name">
-        <input class="popup__input popup__input_type_link" type="url" placeholder="Ссылка на картинку" name="link">
+        <input id="input_type_place-name" class="popup__input popup__input_type_place-name" type="text" placeholder="Название места" name="name" minlength="2" maxlength="30" required>
+        <span id="input_type_place-name-error" class="popup__error popup__error_type_place-name"></span>
+        <input id="input_type_link" class="popup__input popup__input_type_link" type="url" placeholder="Ссылка на картинку" name="link" required>
+        <span id="input_type_link-error" class="popup__error popup__error_type_link"></span>
       </fieldset>
       <button class="popup__btn-save" type="submit" aria-label="Создать">Создать</button>
     </form>
