--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="popup__container">
     <button class="popup__close-btn" type="button" aria-label="Закрыть"></button>
     <h2 class="popup__title">Редактировать профиль</h2>
-    <form class="popup__form popup__form_type_edit" name="formEdit">
+    <form class="popup__form popup__form_type_edit" name="formEdit" novalidate>
       <fieldset class="popup__fieldset">
         <input id="input_type_name" class="popup__input popup__input_type_name" type="text" placeholder="Имя пользователя" name="name" minlength="2" maxlength="40" required>
         <span id="input_type_name-error" class="popup__error popup__error_type_name"></span>
@@ -55,7 +55,7 @@
   <div class="popup__container">
     <button class="popup__close-btn popup__close-btn_type_add" type="button" aria-label="Закрыть"></button>
     <h2 class="popup__title">Новое место</h2>
-    <form class="popup__form popup__form_type_add" name="formAdd">
+    <form class="popup__form popup__form_type_add" name="formAdd" novalidate>
       <fieldset class="popup__fieldset">
         <input id="input_type_place-name" class="popup__input popup__input_type_place-name" type="text" placeholder="Название места" name="name" minlength="2" maxlength="30" required>
         <span id="input_type_place-name-error" class="popup__error popup__error_type_place-name"></span>
